--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.85'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,12 +18,14 @@ no_index:
   directory:
     - inc
     - t
+    - xt
 requires:
   Module::Install: 0
+  URI::Escape: 0
   perl: 5.6.0
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Module-Install-Bugtracker
   homepage: http://search.cpan.org/dist/Module-Install-Bugtracker/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/hanekomu/module-install-bugtracker.git
-version: 0.01
+version: 0.02
